WIP fix responsive layout for design fields on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ img {
 
 @media (min-width: 480px) {
   .logo-img{
-    max-width: 120;
+    max-width: 120px;
   }
 }
 
@@ -470,6 +470,32 @@ img {
   transform: scale(1.1);
 }
 
+@media (max-width: 1023px) {
+  .design-fields {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .design-field {
+    flex: none;
+    width: 100%;
+    height: 60vh;
+    transition: none;
+  }
+
+  .design-field:hover {
+    flex: none;
+  }
+
+  .design-field:hover::before {
+    opacity: 1;
+  }
+
+  .design-field:hover h3 {
+    transform: none;
+  }
+}
+
 /* Navigation Bar Adjustments */
 .nav-links ul {
   flex-wrap: wrap;
@@ -542,7 +568,7 @@ img {
 }
 
 /* Design Fields */
-.design-fields {
+/*.design-fields {
   flex-direction: column;
   height: auto;
 }
@@ -560,7 +586,7 @@ img {
   .design-field {
     height: auto;
   }
-}
+} */
 
 /* Contact Section */
 .contact {
@@ -1248,7 +1274,7 @@ input[type="file"]::file-selector-button:hover {
   }
 
   /* Design Fields */
-  .design-fields {
+  /* .design-fields {
     flex-direction: row;
     height: auto;
   }
@@ -1257,7 +1283,7 @@ input[type="file"]::file-selector-button:hover {
     flex: 1;
     height: auto;
     min-width: 33.33%;
-  }
+  } */
 
   /* Contact Section */
   .contact,
